--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,7 @@
 {
   "tabWidth": 2,
   "singleQuote": true,
+  "semi": true,
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
